--- a/admin/css/backstage.css
+++ b/admin/css/backstage.css
@@ -1,5 +1,6 @@
-@charset "utf-8";
 *{margin: 0;padding: 0;}
+html{width: 100%;height:100%;-webkit-text-size-adjust:none;-moz-text-size-adjust:none;-ms-text-size-adjust:none;-o-text-size-adjust:none;text-size-adjust:none;}
+body{width: 100%;height:100%}
 li{list-style: none;}
 input,select,textarea{outline: none;border: none; background: none;}
 textarea{resize: none;}
@@ -13,6 +14,8 @@ a:hover,a:active{text-decoration: none;color: #a02638;}
 .clearfix:before{content: ""; display: table;}
 .clearfix:after{ clear: both;}
 .clearfix{zoom:1;}
+
+
 
 /*头部*/
 .head{height: 106px;width:100%; background:url(../img/Header-Repeat.jpg);overflow: hidden;}
