--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 /*reset*/
 *{margin: 0;padding: 0;}
+html{width: 100%;height:100%;-webkit-text-size-adjust:none;-moz-text-size-adjust:none;-ms-text-size-adjust:none;-o-text-size-adjust:none;text-size-adjust:none;}
+body{width: 100%;height:100%}
 li{list-style: none;}
 input,select,textarea{outline: none;border: none; background: none;}
 textarea{resize: none;}
@@ -13,7 +15,6 @@ a:hover,a:active{text-decoration: none;color: #a02638;}
 .clearfix:before{content: ""; display: table;}
 .clearfix:after{ clear: both;}
 .clearfix{zoom:1;}
-
 /*头部*/
 .head{height: 129px;width:100%; background:url(../admin/img/Header-Repeat.jpg);overflow: hidden;}
 .logo{width: 282px; height: 100%; background: url(../img/logo-TROY.png) 10px center no-repeat;}
