--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 /*reset*/
 *{margin: 0;padding: 0;}
-html{width: 100%;height:100%;-webkit-text-size-adjust:none;-moz-text-size-adjust:none;-ms-text-size-adjust:none;-o-text-size-adjust:none;text-size-adjust:none;}
-body{width: 100%;height:100%}
+html{-webkit-text-size-adjust:none;-moz-text-size-adjust:none;-ms-text-size-adjust:none;-o-text-size-adjust:none;text-size-adjust:none;}
 li{list-style: none;}
 input,select,textarea{outline: none;border: none; background: none;}
 textarea{resize: none;}
