--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
-*{margin: 0;padding:0;}
+@import url(http://fonts.googleapis.com/css?family=Exo:100,200,400);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
+
+*{margin: 0;padding:0;font-family: 'Exo', sans-serif;}
 body{font-family: Georgia,Serif;background: #fff;font-weight: 400;font-size: 15px;color: #333;/*设置字体抗锯齿和光滑度*/-webkit-font-smoothing:antialiased;}
 a{text-decoration: none;color: #555;}
 li{list-style: none;}
