--- a/css/content.css
+++ b/css/content.css
@@ -174,6 +174,11 @@
 /*学科页面内容*/
 .fontBtn1{width: 100%;position: absolute;height: 70%}
 .st-btn-1,.st-btn-2,.st-btn-3,.st-btn-4{width: 200px;height: 200px;position: absolute;top:50%;text-align: center;line-height: 200px;color: #a12638;margin: 29px 0 0 -100px;}
+.st-btn-1 input ~ i,.st-btn-2 input ~ i,.st-btn-3 input ~ i,.st-btn-4 input ~ i{
+    -webkit-transition:transform 0.4s ease-in-out;
+    -moz-transition:transform 0.4s ease-in-out;
+    -o-transition:transform 0.4s ease-in-out;
+    transition:transform 0.4s ease-in-out;}
 .st-btn-1{left:20%;}
 .st-btn-2{left:40%;}
 .st-btn-3{left:60%;}
@@ -192,14 +197,18 @@
 /*学生页面内容*/
 .fontBtn2{width: 100%;position: absolute;height: 70%}
 .st-btn-5,.st-btn-6,.st-btn-7,.st-btn-8{width: 200px;height: 200px;position: absolute;top:50%;text-align: center;line-height: 200px;color: #fff;margin: 29px 0 0 -100px;}
-.st-btn-5{left:20%;}
-.st-btn-6{left:40%;}
-.st-btn-7{left:60%;}
-.st-btn-8{left:80%;}
-.st-btn-5>input,.st-btn-6>input,.st-btn-7>input,.st-btn-8>input{opacity: 0;z-index: 1000;}
-.st-btn-5>input,.st-btn-5>a,.st-btn-6>input,.st-btn-6>a,.st-btn-7>input,.st-btn-7>a,.st-btn-8>input,.st-btn-8>a{color:#a12638!important;width: 97px;height:97px;left:50%;line-height:75px;position: absolute;margin-top:43px;padding-top:55px;margin-left: -52px;/*让光标形状变为手型，因为点击的是a 不是input*/cursor: pointer;}
-.st-btn-5 input:hover + a,.st-btn-6 input:hover + a,.st-btn-7 input:hover + a,.st-btn-8 input:hover + a{background-color:#fff}
-.st-btn-5 input:hover ~ i,.st-btn-6 input:hover ~ i,.st-btn-7 input:hover ~ i,.st-btn-8 input:hover ~ i{
+.st-btn-5 input ~ i,.st-btn-6 input ~ i,.st-btn-7 input ~ i,.st-btn-8 input ~ i{
+    -webkit-transition:transform 0.4s ease-in-out;
+    -moz-transition:transform 0.4s ease-in-out;
+    -o-transition:transform 0.4s ease-in-out;
+    transition:transform 0.4s ease-in-out;}
+.st-btn-5{left:25%;margin-left: -100px}
+.st-btn-6{left:50%;margin-left: -100px}
+.st-btn-7{left:75%;margin-left: -100px}
+.st-btn-5>input,.st-btn-6>input,.st-btn-7>input{opacity: 0;z-index: 1000;}
+.st-btn-5>input,.st-btn-5>a,.st-btn-6>input,.st-btn-6>a,.st-btn-7>input,.st-btn-7>a{color:#a12638!important;width: 97px;height:97px;left:50%;line-height:75px;position: absolute;margin-top:43px;padding-top:55px;margin-left: -52px;/*让光标形状变为手型，因为点击的是a 不是input*/cursor: pointer;}
+.st-btn-5 input:hover + a,.st-btn-6 input:hover + a,.st-btn-7 input:hover + a{background-color:#fff}
+.st-btn-5 input:hover ~ i,.st-btn-6 input:hover ~ i,.st-btn-7 input:hover ~ i{
     -webkit-transform:translateY(-15px);
     -moz-transform:translateY(-15px);
     -o-transform: translateY(-15px);
@@ -209,3 +218,39 @@
 
 /*教师页面*/
 .details{position: absolute;top:129px;width:100%}
+
+/*搜索表格样式*/
+.searchBox{position: relative;width:800px;height:500px;margin:0 auto;color:#fff;}
+.title{font-weight: bolder;font-size: 20px;text-align: center;}
+.selectArea{margin: 15px;}
+.selectArea input[type=checkbox] {visibility: hidden;}
+.selectArea select {background-color: #a12638;-webkit-appearance: none;-moz-appearance: none;border-radius: 15px;-webkit-border-radius:15px;-moz-border-radius: 15px;border: 1px solid #fff;color:#fff;padding:0 2px;text-align:center;}
+.selectArea select:hover,.selectArea select:focus{border: 1px solid #ff0;}
+.checkArea{float: left;position: relative;width: 61px;height: 40px;margin: 0 5px;border-radius: 10px;-webkit-border-radius: 10px;-moz-border-radius: 10px;}
+.checkArea span{position: absolute;left: 18px;top:-15px;}
+.checkArea .checkbox{width: 40px;height: 16px;border:1px solid #fff;position: relative;top:25%;left:8px;border-radius: 8px;-webkit-border-radius: 8px;-moz-border-radius: 8px;}
+.checkArea .checkbox label{width: 12px;height: 12px;top:1px;left:2px;border-radius: 50%;-webkit-border-radius: 50%;-moz-border-radius:50%;background: #ff0;cursor: pointer;position: absolute;-webkit-transition: all .5s ease;-moz-transition:all .5s ease;-o-transition: all .5s ease;transition: all .5s ease;}
+.checkArea .checkbox input[type=checkbox]:checked + label {left: 24px;background: #26ca28;font-family: 'Exo', sans-serif;}
+.textArea{margin: 70px 0 0 15px;}
+.textSearch .searchName{width:150px;border: 1px solid #fff;margin-bottom: 24px;border-radius: 15px;-webkit-border-radius: 15px;-moz-border-radius: 15px;}
+.textSearch input[type=text] {padding:0 10px;color:#fff;margin-top: 5px;font-family: 'Exo', sans-serif;}
+.textSearch .searchName:hover,.textSearch .searchName:focus{border: 1px solid #ff0;}
+.searchSubBtn,.searchResBtn{font-size: 20px;color:#fff;margin-left:50px;position: relative;}
+.searchSubBtn .btnLine,.searchResBtn .btnLine{position:absolute;background: none;transition:0.4s ease;-webkit-transition:0.4s ease;-moz-transition:0.4s ease;-o-transition:0.4s ease;}
+.searchSubBtn .lineTop{height: 1px;width: 0px;left:-110px;top:-5px}
+.searchResBtn .lineTop{height: 1px;width: 0px;left:-100px;top:-5px}
+.searchSubBtn .lineRight{width:1px;height: 0px;top:-40px;right:-15px;}
+.searchResBtn .lineRight{width:1px;height: 0px;top:-40px;right:-15px;}
+.searchSubBtn .lineBottom{height: 1px;width: 0px;left:210px;top:32px}
+.searchResBtn .lineBottom{height: 1px;width: 0px;left:210px;top:32px}
+.searchSubBtn .lineLeft{width:1px;height: 38px;top:80px;left:-10px;}
+.searchResBtn .lineLeft{width:1px;height: 38px;top:80px;left:-10px;}
+.searchSubBtn:hover .btnLine,.searchResBtn:hover .btnLine{background: #fff}
+.searchSubBtn:hover .lineTop{height: 1px;width: 100px;left:-10px;top:-5px}
+.searchResBtn:hover .lineTop{height: 1px;width: 86px;left:-10px;top:-5px}
+.searchSubBtn:hover .lineRight{width:1px;height: 38px;top:-5px;right:-15px;}
+.searchResBtn:hover .lineRight{width:1px;height: 38px;top:-5px;right:-15px;}
+.searchSubBtn:hover .lineBottom{height: 1px;width: 100px;left:-10px;top:32px}
+.searchResBtn:hover .lineBottom{height: 1px;width: 86px;left:-10px;top:32px}
+.searchSubBtn:hover .lineLeft{width:1px;height: 38px;top:-5px;left:-10px;}
+.searchResBtn:hover .lineLeft{width:1px;height: 38px;top:-5px;left:-10px;}
