--- a/css/loginCSS.css
+++ b/css/loginCSS.css
@@ -21,6 +21,8 @@ body{
     height: auto;
     background-image: url(../img/fullwidth.jpg);
     background-size: cover;
+    filter:blur(5px);
+    -ms-filter:blur(5px);
     -webkit-filter: blur(5px);
     z-index: 0;
 }
