--- a/admin/css/backstage.css
+++ b/admin/css/backstage.css
@@ -26,18 +26,9 @@ a:hover,a:active{text-decoration: none;color: #a02638;}
 
 
 /*主要框架*/
-.ifrPage{display: block;width: 90%;margin-left: 60px}
+.ifrPage{display: block;width: 95%;margin-left: 60px;}
 .title{font:20px/2.5 'Exo', sans-serif;font-weight: bold;z-index: 10;padding: 0 15px;zoom:1;background-color: #a12638;color: white}
 
-/*右侧网页嵌套*/
-.details_operation{margin-bottom:20px;}
-.details{padding: 1em; font-family: 'Exo', sans-serif;}
-.bui_select{background-color: #e7e9ea; height: 30px; float: left;}
-.add{width: 92px; height: 30px; font-family: 'Exo', sans-serif; font-size: 14px;}
-.select{font-family: 'Exo', sans-serif; font-size: 14px; height: 22px; margin: 4px 8px;}
-.text {float: left; margin-left: 30px; display: inline;}
-.text span{line-height: 30px; font-size: 14px; float:left; margin-right: 10px;}
-.search{width: 140px; height: 30px; line-height: 30px\9; background-color: #E8E8E8; padding: 0 8px;}
 
 /*按钮图片样式*/
 .login64x64{background: url(../img/icon/loginBtn64x64.png) no-repeat left center;padding-left:30px;width: 100px;height: 34px;}
@@ -58,7 +49,7 @@ a:hover,a:active{text-decoration: none;color: #a02638;}
 .footer a{color:#FFF;}
 
 /*表格样式*/
-table {overflow:hidden;font-size: 15px;font-family: 'Exo', sans-serif;border:1px solid #d3d3d3;background:#fefefe;border-collapse:collapse;width:30%;margin:5% auto;border-radius:5px;-webkit-border-radius:5px;-moz-border-radius:5px;box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);}
+table {overflow:hidden;font-size: 15px;font-family: 'Exo', sans-serif;border:1px solid #d3d3d3;background:#fefefe;border-collapse:collapse;width:50%;margin:5% auto;border-radius:5px;-webkit-border-radius:5px;-moz-border-radius:5px;box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);}
 .table caption {color: #a12638;padding-bottom: 20px;font-size: 16px;font-family: 'Exo', sans-serif;font-weight: bold}
 .table th, .table td{padding:8px; text-align:left;}
 .table th, .table th:hover{padding-top:8px; text-shadow: 1px 1px 1px #fff; background:#e8eaeb;color: #a12638!important;}
@@ -68,3 +59,11 @@ table {overflow:hidden;font-size: 15px;font-family: 'Exo', sans-serif;border:1px
 .table tfoot{padding-top:22px; text-shadow: 1px 1px 1px #fff; background:#e8eaeb !important;color: #a12638!important;}
 /*.table  tr:hover *{background-image: -webkit-linear-gradient(top, #e8eaeb, #ffffff)}*/
 
+
+/*排序搜索样式*/
+.bui_select{background-color: #e7e9ea; height: 30px; float: left;}
+.text {float: left; margin-left: 30px; display: inline;color:#a12638;font-weight: 500}
+.text span{line-height: 30px; font-size: 14px; float:left; margin-right: 10px;}
+.search{width: 140px; height: 30px; line-height: 30px\9; background-color: #E8E8E8; padding: 0 8px;}
+.select{font-size: 14px; height: 22px; margin: 4px 8px;color:#a12638;}
+.searchBox{position: absolute;top:129px;}
