--- a/admin/css/backstage.css
+++ b/admin/css/backstage.css
@@ -1,56 +1,14 @@
-@import url(http://fonts.googleapis.com/css?family=Exo:100,200,400);
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
-
-*{margin: 0;padding:0;font-family: 'Exo', sans-serif;}
-html{-webkit-text-size-adjust:none;-moz-text-size-adjust:none;-ms-text-size-adjust:none;}
-li{list-style: none;}
-input,select,textarea{outline: none;border: none; background: none;}
-textarea{resize: none;}
-a{text-decoration: none;}
-a:link,a:visited{color:#000;}
-a:hover,a:active{text-decoration: none;color: #a02638;}
-.fl{float: left;}
-.fr{float: right;}
-/*clearfix为伪元素，用来做闭合浮动*/
-.clearfix:after,
-.clearfix:before{content: ""; display: table;}
-.clearfix:after{ clear: both;}
-.clearfix{zoom:1;}
-
-
-
-/*头部*/
-.head{height: 106px;width:100%; background:url(../img/Header-Repeat.jpg);overflow: hidden;}
-.logo{width: 166px; height: 100%; background: url(../img/logo.png) 10px center no-repeat;}
-.head_text{height: 100%; font-size:25px;line-height:106px ; color: #FFF; padding-right: 10px;font-family: 'Exo', sans-serif;}
-
-
-/*主要框架*/
-.ifrPage{display: block;width: 95%;margin-left: 60px;}
-.title{font:20px/2.5 'Exo', sans-serif;font-weight: bold;z-index: 10;padding: 0 15px;zoom:1;background-color: #a12638;color: white}
-
-
 /*按钮图片样式*/
-.login64x64{background: url(../img/icon/loginBtn64x64.png) no-repeat left center;padding-left:30px;width: 100px;height: 34px;}
 .add48x48{background: url(../img/icon/additonBtn48x48.png) no-repeat left center;padding-left:50px;width: 114px;height: 48px;}
 .sub24x24{background: url(../img/icon/submitBtn24x24.png) no-repeat left center;padding-left:25px;width: 70px;height: 24px;}
 .res24x24{background: url(../img/icon/resetBtn24x24.png) no-repeat left center;padding-left:25px;width: 70px;height: 24px;margin-left: 10px}
-.closeBtn24x24{background: url(../img/icon/closeBtn24x24.png) no-repeat left center;width: 80px;height: 34px;}
-.backBtn20x20{background: url(../img/icon/goBack20x20.png) no-repeat left center;padding-top:5px;width: 65px;height: 20px;}
-.homeBtn20x20{background: url(../img/icon/homePage20x20.png) no-repeat left center;padding-top:5px;width: 65px;height: 20px;}
-.logoutBtn16x16{background: url(../img/icon/logoutBtn16x16.png) no-repeat left center;padding-top:5px;width: 65px;height: 20px;}
-.edit20x20{background: url(../img/icon/editBtn20x20.png) no-repeat left center;padding-top:5px;padding-left:15px;width: 45px;height: 20px;}
-.del20x20{background: url(../img/icon/deleteBtn20x20.png) no-repeat left center;padding-top:5px;padding-left:15px;width: 55px;height: 20px;}
-.detail20x20{background: url(../img/icon/detailBtn20x20.png) no-repeat left center;padding-top:5px;padding-left:15px;width: 61px;height: 20px;}
 
 
-/*底部*/
-.footer{width:100%;text-align:center; color:#5C5C5C;background-color:#A22638; padding:25px 0;line-height:24px;border-top: solid 5px rgb(221,221,221);position: absolute;left:0;bottom:0px;}
-.footer a{color:#FFF;}
 
 /*表格样式*/
-table {overflow:hidden;font-size: 15px;font-family: 'Exo', sans-serif;border:1px solid #d3d3d3;background:#fefefe;border-collapse:collapse;width:50%;margin:5% auto;border-radius:5px;-webkit-border-radius:5px;-moz-border-radius:5px;box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);}
-.table caption {color: #a12638;padding-bottom: 20px;font-size: 16px;font-family: 'Exo', sans-serif;font-weight: bold}
+.details{margin-top: 140px}
+table {overflow:hidden;font-size: 16px;font-family: 'Exo', sans-serif;border:1px solid #d3d3d3;background:#fefefe;border-collapse:collapse;width:50%;margin:5% auto;border-radius:5px;-webkit-border-radius:5px;-moz-border-radius:5px;box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);}
+.table caption {color: #a12638;padding-bottom: 20px;font-size: 18px;font-family: 'Exo', sans-serif;font-weight: bold}
 .table th, .table td{padding:8px; text-align:left;}
 .table th, .table th:hover{padding-top:8px; text-shadow: 1px 1px 1px #fff; background:#e8eaeb;color: #a12638!important;}
 .table td{ border-right:1px solid #e0e0e0;}
